          (e.g. songinfo) still need wrappers though. (Orcan)
        - Ported the following .ui widgets to Qt4: appearancebase, mixdowndialogbase, 
          shortcutcapturedialogbase, shortcutconfigbase, aboutbox, editsysexdialogbase,
          editnotedialogbase, editctrlbase (Orcan)
        - Converted all of editevent.cpp to Qt4 (Orcan)
19.11.2010
        - Started some conversions of midieditor, pianoroll, drumedit, incl. their QGridLayouts. (Tim)
        - More icon conversion work (Orcan)
        - Move global, user, project .xpm files into the xpm/ directory. Handle them the same way in 
          filedialog.cpp as we handle other pixmaps elsewhere. (Orcan)
        - Ported the following .ui widgets to Qt4: commentbase, metronomebase, mtrackinfobase, 
          midifilter (Orcan)
18.11.2010
        - Updated build part README file - read it! Tell user to specify Release build type. (Tim)
        - Added printout of build type in top level cmake. (Tim)
        - Removed duplicate LASH detection in top level cmake. (Tim)
        - Ported the following .ui widgets to Qt4: transformbase, itransformbase, mrconfigbase (Orcan)
        - Finished remaining port work of mixer and strips. Should be all done now. (Tim)
	- Modified icons.cpp to Use theme icons whenever possible. We now need to match muse
	  icons with the standard theme icon names (Orcan)
17.11.2010
        - Removed a fix which cured graphic corruption for me in MusE-1. Not required now. (Tim)
        - Small change to Orcan's filedialog, re-enabled global button. (Tim)
        - Ported the following .ui widgets to Qt4: songinfo, mittransposebase, velocitybase (Orcan)
16.11.2010
        - Fixed track info sizing problems. In Arranger::switchInfo() added tgrid->update(). (Tim)
          QLayout::update() seems to be a new method, we needed to call it here.
        - Fixed mixer maximum and minimum sizes. (Tim)