@@ -22,7 +22,7 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <widget class="QWidget" name="tab">
+     <widget class="QWidget" name="tab1">
       <attribute name="title">
        <string>Arranger</string>
       </attribute>
@@ -193,7 +193,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tab">
+     <widget class="QWidget" name="tab2">
       <attribute name="title">
        <string>Colors</string>
       </attribute>
@@ -740,7 +740,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="tab">
+     <widget class="QWidget" name="tab3">
       <attribute name="title">
        <string>Style/Fonts</string>
       </attribute>
@@ -834,6 +834,34 @@
            </layout>
           </item>
           <item>
+            <layout class="QHBoxLayout" >
+              <item>
+                <widget class="QLabel" name="label_41" >
+                  <property name="text" >
+                    <string>Style Sheet:</string>
+                  </property>
+                </widget>
+              </item>
+              <item>
+                <widget class="QLineEdit" name="styleSheetPath" />
+              </item>
+              <item>
+                <widget class="QToolButton" name="openStyleSheet" >
+                  <property name="text" >
+                    <string>...</string>
+                  </property>
+                </widget>
+              </item>
+              <item>
+                <widget class="QToolButton" name="defaultStyleSheet" >
+                  <property name="text" >
+                    <string>...</string>
+                  </property>
+                </widget>
+              </item>
+            </layout>
+           </item>
+           <item>
            <spacer name="spacer3">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -1417,6 +1445,8 @@
   <tabstop>selectBgButton</tabstop>
   <tabstop>arrGrid</tabstop>
   <tabstop>themeComboBox</tabstop>
+  <tabstop>styleSheetPath</tabstop>
+  <tabstop>openStyleSheet</tabstop>
   <tabstop>fontName0</tabstop>
   <tabstop>fontName1</tabstop>
   <tabstop>fontName2</tabstop>
